# h5ify

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
h5ify/: __init__.py  h5ify.py
